current pollen data

--- a/index.html
+++ b/index.html
@@ -18,8 +18,20 @@
 
 <body>
 
+    <section id="location"></section>
+    <section id="pollenData"></section>
 
 
+    <!-- firstly we are making a sketch for us in html but we're using it to build same in JS and instead we're using id=location so we don't need this anymore -->
+    <!-- <h2>Pollen</h2>
+    <ul>
+        <li>Alder 0</li>
+        <li>Birch 0</li>
+        <li>Grass 0</li>
+        <li>Mugwort 0</li>
+        <li>Olive 0</li>
+        <li>Ragweed 0</li>
+    </ul> -->
 </body>
 
 </html>
